src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>Design_Total__c</fullName>
        <description>Estimated Level of Effort (Hours) for design of the request</description>
        <label>Design Total</label>
        <summarizedField>Application_Inventory__c.Total_Design__c</summarizedField>
        <summaryForeignKey>Application_Inventory__c.Requirement__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DeveloperAssigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_priority__c</fullName>
        <inlineHelpText>The priority indicates the order in which the requirements will be implemented by the development team.</inlineHelpText>
        <label>Development priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_Assumption__c</fullName>
        <description>Any assumptions which were taken during the estimations for the request</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Estimate Assumption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Needs_Cleanup__c</fullName>
        <formula>User_Story__r.Capability__r.Needs_Cleanup__c</formula>
        <label>Feature Needs Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feature_Release__c</fullName>
        <description>Pulls Release (Phase)  from Feature Object - update to pull via User Story since all Reqs have US</description>
        <formula>User_Story__r.Capability__r.Release__r.Name</formula>
        <label>Feature Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <formula>TEXT(Feature__r.Feature_Type__c )</formula>
        <label>Feature Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capability related to the request</description>
        <label>Feature</label>
        <referenceTo>Capability__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fit_Gap_Status__c</fullName>
        <label>Fit/Gap Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>For Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fit_or_Gap__c</fullName>
        <label>Fit/Gap?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Gap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Description__c</fullName>
        <description>Functional Description of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Include information about the impacts the functionality will have to the end user. Specifically, what they will see on the interface, how often the data will be updated, etc.</inlineHelpText>
        <label>Functional Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Difficulty__c</fullName>
        <label>Gap Difficulty?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Object__c</fullName>
        <label>Gap Area?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Current System Configuration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Form</fullName>
                </value>
                <value>
                    <fullName>Interface</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>SFDC Configuration</fullName>
                </value>
                <value>
                    <fullName>Workflows</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gap_Priority__c</fullName>
        <label>Gap Priority?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Must Have</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impacted_Teams__c</fullName>
        <inlineHelpText>Select other teams impacted by this requirement.</inlineHelpText>
        <label>Impacted Teams</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Interfaces/ETL</fullName>
                </value>
                <value>
                    <fullName>Org Strategy/Sales Hierarchy</fullName>
                </value>
                <value>
                    <fullName>Accounts, Leads, Contacts</fullName>
                </value>
                <value>
                    <fullName>Doc Strategy</fullName>
                </value>
                <value>
                    <fullName>Sales Process</fullName>
                </value>
                <value>
                    <fullName>LoA</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Forecasting</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Encryption</fullName>
                </value>
                <value>
                    <fullName>Digital Sales</fullName>
                </value>
                <value>
                    <fullName>CMD Pack 4</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - QtC CQ</fullName>
                </value>
                <value>
                    <fullName>CPQ - Indirect</fullName>
                </value>
                <value>
                    <fullName>CPQ - Masterdata</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI MN</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI NSW</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI FN</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - NPI All</fullName>
                </value>
                <value>
                    <fullName>CPQ - Direct ION</fullName>
                </value>
                <value>
                    <fullName>CPQ - Enterprise</fullName>
                </value>
                <value>
                    <fullName>CPQ - Architecture &amp; Integration</fullName>
                </value>
                <value>
                    <fullName>CPQ - Capabilities</fullName>
                </value>
                <value>
                    <fullName>CPQ Analytics</fullName>
                    <isActive>false</isActive>
                    <label>CPQ Analytics</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Assessment__c</fullName>
        <inlineHelpText>Outcome from Initial Assessment.</inlineHelpText>
        <label>Initial Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workaround available</fullName>
                </value>
                <value>
                    <fullName>Solution available</fullName>
                </value>
                <value>
                    <fullName>No current solution or workaround available.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_3_Process__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Level 3 Process</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort_Value__c</fullName>
        <description>Value is calculated by the Level of Effort formula field</description>
        <formula>if(Level_of_Effort__c = &quot;High&quot;,1, 
if(Level_of_Effort__c = &quot;Medium&quot;,2, 
If(Level_of_Effort__c = &quot;Low&quot;,3, 
0)))</formula>
        <inlineHelpText>Value is calculated by the Level of Effort formula field. 
High = 1 
Medium = 2 
Low = 3</inlineHelpText>
        <label>Level of Effort Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <description>Shows the category of level of effort required for the request based on total estimate for the request</description>
        <formula>IF(TotEst__c = 0.00, &quot;N/A&quot;, 
IF(TotEst__c &lt;= 8.00, &quot;Low&quot;, 
IF(TotEst__c &gt; 20.00, &quot;High&quot;, 
&quot;Medium&quot;)))</formula>
        <inlineHelpText>Low: Requires Less Than 8 Days of Work Effort 
Medium: Requires 8.01 - 20 Days of Work Effort 
High: Requires More Than 20.01 Days of Work Effort</inlineHelpText>
        <label>Level of Effort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lightning_Issue_Description__c</fullName>
        <description>Describe the Lightning Issue in detail</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Describe the Lightning Issue in detail</inlineHelpText>
        <label>Lightning Issue Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Lightning_Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if there is a lightning issue in implementing the requirement.</description>
        <label>Lightning Issue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Needs_Cleanup__c</fullName>
        <formula>User_Story__r.Needs_Cleanup__c</formula>
        <label>Needs Cleanup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Gap_Area__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Gap Area?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Priority__c</fullName>
        <description>Shows the priority of the request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Value is calculated based on the value in the Total Priority Ranking field: 
High = Any value greater than or equal to 2.50 
Medium = Any value between 1.50 and 2.49 
Low = Any value less than 1.50</inlineHelpText>
        <label>Overall Priority</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request_Title__c</fullName>
        <formula>Parent_Request__r.Request_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Request Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Any related request to the request</description>
        <inlineHelpText>Track Parent / Child Requirement relationships. Also use to relate a Duplicate with the Open Request.</inlineHelpText>
        <label>Parent Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Build_Completion_Date__c</fullName>
        <description>Date by when the build of a requirement is completed, unit tested and available in SIT environment for further test</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date by when the build of a requirement is completed, unit tested and available in SIT environment for further test. Required field once requirement reaches status &apos;Approve: Approved to Deploy&apos;.</inlineHelpText>
        <label>Planned Build Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Design_Review_Date__c</fullName>
        <description>Gives information when this requirement is planned for design review</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates by when this requirement will be presented for design review</inlineHelpText>
        <label>Planned Design Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates each request to a Release or Project.</description>
        <inlineHelpText>This is the suggested release in which the requirement should be deployed.</inlineHelpText>
        <label>Planned Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Hit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks whether the request is quick hit or not</description>
        <inlineHelpText>A request can only be a quick hit if the IT level of effort is “low”, Business priority is “high”, the urgency of having the request is immediate, and the request can be implemented without impacting integration.</inlineHelpText>
        <label>Quick Hit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RICEFW_Complexity__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.Complexity__c)</formula>
        <label>RICEFW Complexity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_ID__c</fullName>
        <formula>IF(RICEFW_Inventory_Name__c != null,RICEFW_Inventory_Name__r.RICEFW_ID__c, null)</formula>
        <inlineHelpText>Release + RICEFW Object + RICEFW #</inlineHelpText>
        <label>RICEFW ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Inventory_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a RICEFW Inventory record to fill the gap. You may need to create a RICEFW Inventory record if the applicable one does not yet exist.</inlineHelpText>
        <label>RICEFW Inventory Name</label>
        <referenceTo>RICEFW_Inventory__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RICEFW_New_Modified__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.New_Modified__c)</formula>
        <label>RICEFW New / Modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Object__c</fullName>
        <formula>RICEFW_Inventory_Name__r.RecordType.Name</formula>
        <label>RICEFW Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Priority__c</fullName>
        <formula>TEXT( RICEFW_Inventory_Name__r.Priority__c)</formula>
        <label>RICEFW Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_System_Impacted__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.System_Impacted__c)</formula>
        <label>RICEFW System Impacted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RICEFW_Type__c</fullName>
        <formula>TEXT(RICEFW_Inventory_Name__r.Type__c)</formula>
        <label>RICEFW Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <description>Regions that get impacted due to this requirement.</description>
        <inlineHelpText>Regions that get impacted due to this requirement.</inlineHelpText>
        <label>Regions Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions_Requesting__c</fullName>
        <description>Regions where the request needs to be build</description>
        <label>Regions Requesting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release in which the request will go</description>
        <inlineHelpText>The release in which the request will actually be deployed. If the requirement has not been approved for a release, there should not be a value in this field.</inlineHelpText>
        <label>Committed Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_From_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Release from which the request has been removed</description>
        <label>Removed From Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed_Sprint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identify requirements removed from a sprint.</description>
        <inlineHelpText>Indicate that a Requirement was removed from a Sprint</inlineHelpText>
        <label>Removed from Sprint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Sprint_Differs_from_User_Story__c</fullName>
        <formula>IF(
 AND(
  NOT(ISNULL(Sprint__r.Id)),
  Sprint__r.Id &lt;&gt; &quot;&quot;,
  Sprint__r.Id  &lt;&gt; User_Story__r.Sprint_Planned__r.Id), 
 TRUE,
 FALSE
)</formula>
        <label>Req. Sprint Differs from User Story</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated for Requirement Gathering.</description>
        <inlineHelpText>Number of hours estimated for Requirement Gathering.</inlineHelpText>
        <label>Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Description__c</fullName>
        <description>Gathers further details for requirements.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Detailed Summary* 
Screen(s) Impacted* 
Field Name(s) &amp; Type(s)* 
Picklist Values 
Calculation 
Dependency 
Workflow/Approval Rules 
Interfacing System Updates 
Interface Frequency 
Data Volumes 
*Indicates information required for all requests!</inlineHelpText>
        <label>Requirement Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Title__c</fullName>
        <description>Captures the requirement title</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the requirement title</inlineHelpText>
        <label>Requirement Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <description>Type of the request</description>
        <inlineHelpText>If you are unsure of the type of request you are submitting, please select Unknown.</inlineHelpText>
        <label>Development Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Configuration</fullName>
                </value>
                <value>
                    <fullName>Custom Code</fullName>
                </value>
                <value>
                    <fullName>Data Access</fullName>
                </value>
                <value>
                    <fullName>Data Migration</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Reports/Dashboards</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>User Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Name of the person originally submitting the request.</description>
        <inlineHelpText>Name of the person originally submitting the request.</inlineHelpText>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>CRM_Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequirementSalesforceId__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement&apos;s Salesforce Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>To add detailed notes about a requirement which cannot be tracked through standard SFDC history tracking.</inlineHelpText>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement_Type__c</fullName>
        <label>Requirement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Non-Functional</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Change Enablement</fullName>
                </value>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Requirement Added During Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of hours estimated for completing SIT.</description>
        <inlineHelpText>Number of hours estimated for completing SIT.</inlineHelpText>
        <label>Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOURCE_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SOURCE ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identify any reference where this requirement originated (e.g. tab X in spreadsheet Y</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Release__c</fullName>
        <formula>Sprint__r.Release__r.Name</formula>
        <inlineHelpText>Release to which the Sprint is associated</inlineHelpText>
        <label>Sprint Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Removal_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sprint Removal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sprint_Removed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint from which the requirement has been removed</description>
        <inlineHelpText>Sprint from which the requirement has been removed</inlineHelpText>
        <label>Sprint Removed From</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Requirements (Removed From Sprint)</relationshipLabel>
        <relationshipName>Requirements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartTime_Approve_to_Estimate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime Approve to Estimate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Approved_Emergency_Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Approved Emergency Release</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Approved_to_Deploy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Approved to Deploy</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Build_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Build Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Build__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Build</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Deferred__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Deferred</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Deployed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Deployed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Design__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Design</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Duplicate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Duplicate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Emergency_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_ Emergency Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_Change_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: Change Request</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_New_Requirement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: New Requirement</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_OnHoldWaitingonClient__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify_OnHoldWaitingonClient</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Identify_Submit_for_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Identify: Submit for Business</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Level_of_Effort_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Level of Effort Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_No_Build_Req__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_No Build Req</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Rejected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Rejected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_SIT__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_SIT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StartTime_Test_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>StartTime_Test Production</label>
        <type>DateTime</type>
    </fields>
</CustomObject>